src/render/snapshots/groxide__render__ambiguous__tests__render_ambiguous_macro_trait_special.snap
---
source: src/render/ambiguous.rs
expression: output
---
"Serialize" matches 2 items:

  trait    Serialize             A data structure that can be serialized.
  macro    Serialize             Derive macro for the Serialize trait.

Use --kind trait or --kind macro to select.
