src/render/snapshots/groxide__render__ambiguous__tests__render_impls_trait_with_implementors.snap
---
source: src/render/ambiguous.rs
expression: output
---
trait mycrate::MyTrait

pub trait MyTrait

implementors:
  mycrate::MyStruct
  mycrate::OtherStruct
