src/render/snapshots/groxide__render__ambiguous__tests__render_impls_type_no_implementations.snap
---
source: src/render/ambiguous.rs
expression: output
---
struct mycrate::Empty

pub struct Empty

No trait implementations.
