src/render/snapshots/groxide__render__ambiguous__tests__render_impls_type_non_synthetic_first_then_synthetic.snap
---
source: src/render/ambiguous.rs
expression: output
---
struct mycrate::Mutex

pub struct Mutex<T: ?Sized>

Trait Implementations:
  impl Clone
  impl Debug
  impl Default
  impl Send (synthetic)
  impl Sync (synthetic)
