src/render/snapshots/groxide__render__ambiguous__tests__render_source_single_line.snap
---
source: src/render/ambiguous.rs
expression: output
---
const mycrate::MAX_SIZE  src/lib.rs:42
pub const MAX_SIZE: usize = 1024;
