src/render/snapshots/groxide__render__ambiguous__tests__render_source_with_range.snap
---
source: src/render/ambiguous.rs
expression: output
---
struct mycrate::Mutex
pub struct Mutex<T: ?Sized>

An asynchronous Mutex-like type.

Provides mutual exclusion.

── Source: src/sync/mutex.rs:42-147 ──
pub struct Mutex<T: ?Sized> {
    s: semaphore::Semaphore,
    c: UnsafeCell<T>,
}
